# mainline

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL.txt  INSTALL_Win32.txt  Makefile.am  README  UPGRADING.txt  acinclude.m4  bootstrap-configure  configure.ac  openobex-config-version.cmake.in  openobex-config.cmake  openobex-config.cmake.in  openobex.pc.in
CMakeModules/: FindBluetooth.cmake  FindLibUSB.cmake  FindXslt.cmake  GenerateExportHeader.cmake  UseDocbook.cmake  UseXslt.cmake
apps/: CMakeLists.txt  Makefile.am  obex_find.c  obex_io.c  obex_io.h  obex_tcp.c
apps/ircp/: CMakeLists.txt  Makefile.am  dirtraverse.c  ircp_client.c  ircp_io.c  ircp_server.c
apps/lib/: CMakeLists.txt  Makefile.am  obex_io.c  obex_put_common.c
apps/obex_test/: CMakeLists.txt  Makefile.am  obex_test.c  obex_test.h  obex_test_cable.c  obex_test_client.c  obex_test_server.c
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  ircp.xml  irobex_palm3.xml  irxfer.xml  obex_find.xml  obex_tcp.xml  obex_test.xml  openobex-apps.xml  openobex.coverpage  referenceinfo.xml  referenceinfo.xml.in
include/: Makefile.am
include/msvc/: stdbool.h  unistd.h
include/openobex/: CMakeLists.txt  obex.h  obex_const.h  version.h.in
ircp/: ircp_io.h
lib/: CMakeLists.txt  Makefile.am  api.c  bluez_compat.h  btobex.c  btobex.h  cloexec.h  customtrans.c  customtrans.h  databuffer.c  databuffer.h  debug.h  defines.h  fdobex.c  fdobex.h  inobex.c  inobex.h  irda_wrap.h  irobex.c  irobex.h  membuf.c  membuf.h  nonblock.h  obex.c  obex.sym  obex_body.c  obex_body.h  obex_client.c  obex_client.h  obex_connect.c  obex_connect.h  obex_hdr.c  obex_hdr.h  obex_hdr_membuf.c  obex_hdr_ptr.c  obex_hdr_stream.c  obex_header.c  obex_header.h  obex_incl.h  obex_main.c  (+17 more)
lib/transport/: btobex.c  btobex.h  customtrans.c  customtrans.h  fdobex.c  fdobex.h  inobex.c  inobex.h  irda_wrap.h  irobex.c  irobex.h  usb1obex.c  usbobex.c  usbobex.h  usbutils.c
udev/: CMakeLists.txt  Makefile.am  obex-check-device.c  openobex.rules.in
